feat(user): add login email & password
